# formality-hs

./: .gitmodules  .travis.yml  CHANGELOG.md  LICENSE  README.md  formality-hs.cabal
app/: Main.hs
src/: FormalityHs.hs
